<resources>
    <string name="app_name">3D Tic Tac Toe</string>
    <string name="gm_multi_local">Local multiplayer</string>
    <string name="gm_multi_local_desc">Player vs. Player on one device</string>
    <string name="gm_single">Singleplayer</string>
    <string name="gm_single_desc">Player vs. CPU</string>
    <string name="gm_tutorial">Tutorial</string>
    <string name="gm_tutorial_desc">Learn the basics of 3D Tic Tac Toe</string>
    <string name="choose_difficulty">Choose your difficulty</string>
    <string name="difficulty_very_easy">Very easy</string>
    <string name="difficulty_very_easy_desc">Like a little promenade</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_easy_desc">Like a slightly longer promenade</string>
    <string name="difficulty_challenging">Challenging</string>
    <string name="difficulty_challenging_desc">Like a promenade with some hills</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_hard_desc">Like a promenade. On a rainy day.</string>
    <string name="difficulty_very_hard">Very hard</string>
    <string name="difficulty_very_hard_desc">Forget your promenade</string>
    <string name="difficulty_frustrating">Frustrating</string>
    <string name="difficulty_frustrating_desc">Still not enough?</string>
    <string name="cross">Cross</string>
    <string name="circle">Circle</string>
    <string name="empty">Empty</string>
    <string name="player_turn">It\'s the turn of %s</string>
    <string name="player_won">%s has won!</string>
    <string name="player_gave_up">%s gave up!</string>
    <string name="game_finished">Game finished</string>
    <string name="opponent_thinking">%s is thinking...</string>
    <string name="game_ongoing">Game still ongoing</string>
    <string name="end_game_confirm">A game is still ongoing. Do you really want to end it?</string>
    <string name="tutorial_objective">New objective</string>
    <string name="tutorial_objective_success">Objective accomplished</string>
    <string name="tutorial_objective_fail_tries">You have run out of tries</string>
    <string name="tutorial_build_row">Build a row to win</string>
    <string name="tutorial_build_row_fail">Not quite, try to build a row of 4 fields to win</string>
    <string name="tutorial_build_row_success">You won by building a row of 4 fields!</string>
    <string name="tutorial_complete">You have completed the tutorial!</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="tries_left">Tries left: %d</string>
</resources>
